Odradjeno povezivanje sa bazom

--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/App.config
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+        <add name="Konekcija" connectionString="Data Source=DESKTOP-VBCNP83;Initial Catalog=pop-sf53;Integrated Security=True"/>
+  </connectionStrings>
+    
 </configuration>
